fixing weird ie overflow:auto bugs

--- a/public/stylesheets/tlp.css
+++ b/public/stylesheets/tlp.css
@@ -224,7 +224,7 @@ html>body .main-container {
 .basic-generator {
 	width: 310px;
 	border: 1px solid #aaaaaa;
-	height: 165px;
+	height: 175px;
 	background-color: #ededed;
 	padding: 4px;
 	margin-right: 0px;
